--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <title>超级桌面</title>
+  <title>Vite-TS</title>
   <meta name="description" content="Opinionated Vite Starter Template">
 </head>
 <body class="body-root">
   <div id="app"></div>
-  <tab-wallpaper></tab-wallpaper>
-  <script src="./node_modules/@wang-qing/xdesk/web-components/TabWallpaper.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
